[package]
name = "idn-client"
version = "0.1.0"
authors = ["Ideal Labs <hello@idealabs.network>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A client library for interacting with Ideal Network services"

[dependencies]
ink = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "idn_client"
path = "lib.rs"
crate-type = [
    "rlib",       # Used as a regular library
]

[features]
default = ["std"]
std = [
    "ink/std",
    "codec/std",
    "scale-info/std",
]
