[package]
name = "idn-client"
version = "0.1.0"
authors = ["Ideal Labs <hello@idealabs.network>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A client library for interacting with Ideal Network services"

[dependencies]
ink = { version = "5.1.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0.133" }

[lib]
name = "idn_client"
path = "lib.rs"
crate-type = [
    "rlib",       # Used as a regular library
]

[features]
default = ["std"]
std = [
    "ink/std",
    "codec/std",
    "scale-info/std",
]
