[package]
name = "idn-client"
version = "0.1.0"
authors = ["Ideal Labs <hello@idealabs.network>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A client library for interacting with Ideal Network services"

[dependencies]
ink = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "codec/std",
    "scale-info/std",
]
