[package]
name = "idn-contracts"
version = "0.1.0"

# [lib]
# crate-type = ["cdylib"]  # This forces wasm32 target

edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
codec.workspace = true
scale-info.workspace = true
sha2.workspace = true
sp-idn-traits.workspace = true
bp-idn.workspace = true
rand = { workspace = true, default-features = false, features = ["alloc"] }
rand_chacha.workspace = true
# rand_core.workspace = true
# pallet-randomness-beacon.workspace = true

[dev-dependencies]
serde = { version = "1.0", optional = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "codec/std",
    "scale-info/std",
    "sha2/std",
    "sp-idn-traits/std",
    "bp-idn/std",
    "rand/std",
    "rand_chacha/std",
    # "rand_core/std"
    # "pallet-randomness-beacon/std "
]
