[package]
name = "idn-example-consumer-contract"
version = "0.1.0"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"
description = "An example consumer contract for interacting with Ideal Network services"

[dependencies]
ink = { workspace = true, default-features = false }
idn-client-contract-lib = { workspace = true, default-features = false }
sp-idn-traits = { workspace = true, default-features = false }
idn-runtime = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "idn-client-contract-lib/std",
    "sp-idn-traits/std",
    "idn-runtime/std",
    "codec/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
runtime-benchmarks = [
    "idn-runtime/runtime-benchmarks",
]
