[package]
name = "rand-extension-example"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Ideal Network <admin@idealnetwork.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.1.1", default-features = false }
idn-contract-lib = { path = "../idn-contract-lib", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "idn-contract-lib/std",
]
ink-as-dependency = []