[package]
name = "timelock-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
# version must match quote's supported version of proc-macro2
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.106", features=["full", "fold", "printing"] }
pallet-randomness-beacon.workspace = true
