[package]
name = "idn-sdk-kitchensink-node"
description = "A Kitchensink node for the IDN Sdk."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
docify.workspace = true
clap = { features = ["derive"], workspace = true }
futures = { features = ["thread-pool"], workspace = true }
futures-timer.workspace = true
jsonrpsee = { features = ["server"], workspace = true }
serde_json = { workspace = true, default-features = true }
polkadot-sdk = { workspace = true, features = ["experimental", "node"] }
idn-sdk-kitchensink-runtime.workspace = true

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"idn-sdk-kitchensink-runtime/std",
	"polkadot-sdk/std",
]
