[package]
name = "idn-sdk-kitchensink-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
polkadot-sdk = { workspace = true, features = ["pallet-balances", "pallet-sudo", "pallet-timestamp", "pallet-transaction-payment", "pallet-transaction-payment-rpc-runtime-api", "runtime", "experimental"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

# IDN Deps
# pallet-randomness-beacon.workspace = true
# sp-consensus-randomness-beacon.workspace = true
# hex.workspace = true

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = ["substrate-wasm-builder"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde_json/std",
]
