[package]
name = "pallet-idn-consumer"
description = "FRAME pallet for interfacing with IDN as a consumer."
version = "0.0.1-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-xcm.workspace = true
parachain-info.workspace = true
sp-arithmetic.workspace = true
sp-core.workspace = true
xcm.workspace = true
xcm-builder.workspace = true

# IDN
idn-runtime.workspace = true
pallet-idn-manager.workspace = true
sp-idn-traits.workspace = true

# Polkadot
cumulus-primitives-core.workspace = true

[dev-dependencies]
log.workspace = true
pallet-balances.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"xcm/std",
	"xcm-builder/std",
	"idn-runtime/std",
	"pallet-idn-manager/std",
	"sp-idn-traits/std",
	"cumulus-primitives-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
