[package]
name = "pallet-idn-manager"
description = "FRAME pallet for managing IDN services."
version = "0.0.1-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
sp-arithmetic.workspace = true
sp-api.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
xcm.workspace = true
xcm-builder.workspace = true
pallet-xcm.workspace = true
# frame deps
frame-support.workspace = true
frame-system.workspace = true
# idn deps
idn-traits.workspace = true

[dev-dependencies]
pallet-balances.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"idn-traits/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"xcm/std",
	"pallet-xcm/std",
	"pallet-balances/std",
	"xcm-builder/std"
]

runtime-benchmarks = [
	"pallet-xcm/runtime-benchmarks"
]