[package]
name = "pallet-idn-manager"
description = "FRAME pallet for managing IDN services."
version = "0.0.1-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
docify.workspace = true
log.workspace = true
scale-info.workspace = true
simple-mermaid.workspace = true
sha2.workspace = true
sp-arithmetic.workspace = true
sp-api.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-weights.workspace = true
xcm.workspace = true
xcm-builder.workspace = true
xcm-executor.workspace = true
pallet-xcm.workspace = true
# frame deps
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
# idn deps
sp-idn-traits.workspace = true
sp-consensus-randomness-beacon.workspace = true

[dev-dependencies]
pallet-balances.workspace = true
sp-version.workspace = true
xcm-executor.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"sha2/std",
	"sp-idn-traits/std",
	"sp-consensus-randomness-beacon/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-weights/std",
	"xcm/std",
	"pallet-xcm/std",
	"pallet-balances/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"sp-runtime/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]