[package]
name = "pallet-randomness-beacon"
description = "FRAME pallet for bridging to drand."
authors = [
	"Ideal Labs <hello@idealabs.network>",
	]
version = "0.0.1-dev"
license = "Apache-2.0"
edition = "2021"
homepage = "https://www.idealabs.network"
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2 = { version = "0.10.8" }
log.workspace = true
hex = { version = "0.4", features = ["serde"], default-features = false }
# frame deps
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sc-consensus-randomness-beacon = { path = "../../client/consensus/randomness-beacon", default-features = false }
sp-consensus-randomness-beacon = { path = "../../primitives/consensus/randomness-beacon", default-features = false }
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
# arkworks dependencies
sp-ark-bls12-381 = { workspace = true, optional = true }
ark-bls12-381.workspace = true
ark-serialize.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
timelock = { version = "0.0.1", default-features = false }


[dev-dependencies]
sp-keystore = { version = "0.40.0",  default-features = false }
sp-inherents = { version = "34.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"sha2/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"serde/std",
	"hex/std",
	"sp-ark-bls12-381/std",
	"ark-bls12-381/std",
	"ark-serialize/std",
	"ark-ec/std",
	"ark-std/std",
	"timelock/std",
	"sp-consensus-randomness-beacon/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
host-arkworks = ["sp-ark-bls12-381"]