 [package]
name = "pallet-randomness-beacon"
description = "FRAME pallet for bridging to drand."
authors = [
	"Ideal Labs <hello@idealabs.network>",
	]
version = "0.0.1-dev"
license = "Apache-2.0"
edition = "2021"
homepage = "https://www.idealabs.network"
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
log.workspace = true
hex.workspace = true
# frame deps
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-idn-crypto.workspace = true
sp-idn-traits.workspace = true
sp-consensus-randomness-beacon.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
# crypto dependencies
ark-bls12-381.workspace = true
ark-serialize.workspace = true
ark-ec.workspace = true
ark-std.workspace = true

pallet-idn-manager = { workspace = true, default-features = false }

[dev-dependencies]
sp-keystore.workspace = true
sp-inherents.workspace = true
pallet-balances.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"sha2/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-idn-crypto/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"serde/std",
	"hex/std",
	"ark-bls12-381/std",
	"ark-serialize/std",
	"ark-ec/std",
	"ark-std/std",
	"sp-consensus-randomness-beacon/std",
	"sp-idn-traits/std",
	"sp-std/std",
	"pallet-idn-manager/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-idn-manager/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]