[package]
name = "pallet-timelock-transactions"
version = "4.0.0-dev"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "IDN Timelocked Transactions Pallet"
readme = "README.md"

[dependencies]
ark-serialize.workspace = true
ark-bls12-381.workspace = true
codec.workspace = true
log.workspace = true
scale-info.workspace = true
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-consensus-randomness-beacon.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-weights.workspace = true
docify.workspace = true
timelock.workspace = true
ark-std = { workspace = true, optional = true }
ark-ff = { workspace = true, optional = true }
ark-ec = { workspace = true, optional = true }
sp-idn-crypto = { workspace = true, optional = true }
pallet-transaction-payment.workspace = true
pallet-balances.workspace = true
pallet-preimage.workspace = true

[dev-dependencies]
pallet-preimage.workspace = true
pallet-timestamp.workspace = true
sp-core.workspace = true
substrate-test-utils.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-bls12-381.workspace = true
pallet-insecure-randomness-collective-flip.workspace = true

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"ark-std",
	"ark-ff",
	"ark-ec",
	"sp-idn-crypto"
]
std = [
	"sp-idn-crypto",
	"ark-serialize/std",
	"ark-bls12-381/std",
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-preimage/std",
	"scale-info/std",
	"sp-consensus-randomness-beacon/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
	"pallet-timestamp/std",
	"timelock/std",
	"ark-std/std",
	"ark-ff/std",
	"ark-ec/std",
	"pallet-insecure-randomness-collective-flip/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-preimage/try-runtime",
	"sp-runtime/try-runtime",
]
