[package]
name = "idn-traits"
authors = [
	"Juan Girini <juan@idealabs.network>"
	]
version = "0.0.1"
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
codec = { workspace = true, default-features = false }
frame-support = { workspace = true,  default-features = false }
scale-info = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"frame-support/std"
]