[package]
name = "sp-idn-traits"
description = "IDN traits"
authors.workspace = true
version = "0.0.1"
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
codec.workspace = true
frame-support.workspace = true
scale-info.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
	"frame-support/std"
]