[package]
name = "sp-idn-types"
description = "Types used across IDN"
authors.workspace = true
version = "0.0.1"
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
pallet-idn-manager = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "pallet-idn-manager/std",
]