[package]
name = "bp-idn"
description = "Primitives of IDN runtime."
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = true

[dependencies]
codec.workspace = true
scale-info.workspace = true
sha2.workspace = true
ark-serialize.workspace = true

# Substrate
frame-support.workspace = true
sp-runtime.workspace = true
sp-core.workspace = true

# IDN
pallet-idn-manager.workspace = true
sp-consensus-randomness-beacon.workspace = true
sp-idn-crypto.workspace = true
sp-idn-traits.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sha2/std",
	"ark-serialize/std",
	"frame-support/std",
	"pallet-idn-manager/std",
	"sp-consensus-randomness-beacon/std",
	"sp-idn-crypto/std",
	"sp-idn-traits/std",
	"sp-runtime/std",
	"sp-core/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"pallet-idn-manager/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]