[package]
name = "idn-node"
version = "0.3.0"
authors.workspace = true
description = "Ideal Network node"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[build-dependencies]
substrate-build-script-utils.workspace = true

[dependencies]
clap.workspace = true
codec.workspace = true
color-print.workspace = true
docify.workspace = true
futures.workspace = true
jsonrpsee.workspace = true
libp2p.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Local
idn-runtime.workspace = true
pallet-randomness-beacon.workspace = true
sc-consensus-randomness-beacon.workspace = true
sp-consensus-randomness-beacon.workspace = true

# Substrate
frame-benchmarking.workspace = true
frame-benchmarking-cli.workspace = true
frame-metadata-hash-extension.workspace = true
frame-system.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc.workspace = true
prometheus-endpoint.workspace = true
sc-basic-authorship.workspace = true
sc-chain-spec.workspace = true
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-aura.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-network-sync.workspace = true
sc-offchain.workspace = true
sc-rpc.workspace = true
sc-service.workspace = true
sc-sysinfo.workspace = true
sc-telemetry.workspace = true
sc-tracing.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sc-utils.workspace = true
sp-api.workspace = true
sp-application-crypto.workspace = true
sp-block-builder.workspace = true
sp-blockchain.workspace = true
sp-consensus-aura.workspace = true
sp-core.workspace = true
sp-genesis-builder.workspace = true
sp-genesis-builder.default-features = true
sp-keystore.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-timestamp.workspace = true
substrate-frame-rpc-system.workspace = true

# Polkadot
polkadot-cli = { workspace = true, features = ["rococo-native"] }
polkadot-primitives.workspace = true
xcm.workspace = true

# Cumulus
cumulus-client-cli.workspace = true
cumulus-client-collator.workspace = true
cumulus-client-consensus-aura.workspace = true
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-proposer.workspace = true
cumulus-client-service.workspace = true
cumulus-primitives-core.workspace = true
cumulus-primitives-parachain-inherent.workspace = true
cumulus-primitives-storage-weight-reclaim.workspace = true
cumulus-relay-chain-interface.workspace = true

[dev-dependencies]
parking_lot.workspace = true
sp-externalities.workspace = true
sp-state-machine.workspace = true
sp-version.workspace = true

[features]
default = ["std"]
std = ["idn-runtime/std", "xcm/std"]
runtime-benchmarks = [
  "cumulus-primitives-core/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "idn-runtime/runtime-benchmarks",
  "polkadot-cli/runtime-benchmarks",
  "polkadot-primitives/runtime-benchmarks",
  "sc-service/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "idn-runtime/try-runtime",
  "polkadot-cli/try-runtime",
  "sp-runtime/try-runtime",
]

tlock = ["idn-runtime/tlock"]
