[package]
name = "idn-sdk-kitchensink-node"
description = "A Kitchensink node for the IDN Sdk."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[patch.crates-io]
hickory-resolver = { version = "0.25.0-alpha.4", features = ["tokio-runtime"] }

[dependencies]
docify.workspace = true
codec.workspace = true
clap = { features = ["derive"], workspace = true }
futures = { features = ["thread-pool"], workspace = true }
futures-timer.workspace = true
jsonrpsee = { features = ["server"], workspace = true }
libp2p = { workspace = true }
log.workspace = true
serde_json = { workspace = true, default-features = true }
tokio.workspace = true
sc-basic-authorship = { workspace = true, default-features = false }
sc-cli = { workspace = true, default-features = false }
sc-client-api = { workspace = true, default-features = false }
sc-consensus = { workspace = true, default-features = false }
sc-consensus-manual-seal = { workspace = true, default-features = false }
sc-consensus-randomness-beacon = { workspace = true, default-features = false }
sc-executor = { workspace = true, default-features = false }
sc-offchain = { workspace = true, default-features = false }
sc-service = { workspace = true, default-features = false }
sc-telemetry = { workspace = true, default-features = false }
sc-transaction-pool = { workspace = true, default-features = false }
sc-transaction-pool-api = { workspace = true, default-features = false }
sc-network = { workspace = true, default-features = false }
sc-utils = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, default-features = false }
sp-consensus-randomness-beacon = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-timestamp = { workspace = true, default-features = false }
substrate-frame-rpc-system = { workspace = true, default-features = false }
idn-sdk-kitchensink-runtime.workspace = true

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["idn-sdk-kitchensink-runtime/std"]
