[package]
name = "sc-consensus-randomness-beacon"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Randomness-Beacon consensus client"
homepage = "https://idealabs.network"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
codec.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
libp2p.workspace = true
log.workspace = true
prost.workspace = true
futures.workspace = true
prometheus-endpoint.workspace = true
scale-info.workspace = true
tracing.workspace = true

sc-utils.workspace = true
sc-consensus.workspace = true
sc-consensus-aura.workspace = true
sc-consensus-manual-seal.workspace = true
sc-telemetry.workspace = true
sp-api.workspace = true
sp-blockchain.workspace = true
sp-block-builder.workspace = true
sp-consensus.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-randomness-beacon.workspace = true
sp-core.workspace = true
sp-inherents.workspace = true
sp-runtime.workspace = true
sp-timestamp.workspace = true

# cumulus 
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-aura.workspace = true

# arkworks dependencies
ark-bls12-381.workspace = true
ark-serialize.workspace = true

[dev-dependencies]
async-std.workspace = true
rand.workspace = true
tokio.workspace = true
sc-block-builder.workspace = true
sc-service.workspace = true
tracing-test.workspace = true
